# gazebo_gaze_tracker

./: CMakeLists.txt  README.md
include/: cylinder_controller.hh  gaze_tracker_plugin.h  gaze_tracker_publisher.hh
models/gaze_cylinder/: model.config  model.sdf
src/: CMakeLists.txt  cylinder_controller.cpp  gaze_tracker_plugin.cpp  gaze_tracker_publisher.cpp
world/: empty.world
